<resources>
    <string name="app_name">Hews</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="menu_search">Search</string>
    <string name="menu_open_post">Open post</string>
    <string name="menu_upvote">Upvote</string>
    <string name="menu_reply">Reply</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_share_link">Share link</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_unbookmark">Unbookmark</string>
    <string name="menu_typography">Typography</string>
    <string name="send_to">Send to</string>
    <string name="go_to_comment">Go to comment</string>
    <string name="share_link_to">Share link to</string>
    <string name="no_connection_prompt">No connection :(</string>
    <string name="no_more_posts_prompt">No more posts</string>
    <string name="snackebar_action_retry">Retry</string>

    <!--Comment Fragment-->
    <string name="prompt_no_comments">No comments yet</string>
    <string name="prompt_comments_loading_error">Something\'s wrong&#8230;</string>
    <string name="comments_collapsed_prompt">%d collapsed</string>

    <!--Search Fragment-->
    <string name="no_search_result_prompt">No result.\nTry different keywords?</string>
    <!--Bookmark Fragment-->
    <string name="no_bookmark_prompt">No bookmarked posts yet</string>
    <!-- Nav drawer -->
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_top_story">Top</string>
    <string name="nav_new_story">New</string>
    <string name="nav_ask_hn">Ask HN</string>
    <string name="nav_show_hn">Show HN</string>
    <string name="nav_popular">Popular by time range</string>
    <string name="nav_bookmark">Bookmark</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_new_version">&#9733; New version &#9733;</string>
    <string name="nav_feedback">Feedback</string>

    <!--Time Range Popular Spinner-->
    <string-array name="time_range_popular">
        <item>Past 24 hours</item>
        <item>Past 3 days</item>
        <item>Past 7 days</item>
        <item>Custom date range&#8230;</item>
    </string-array>

    <!--Time Range Search Spinner-->
    <string-array name="time_range_search">
        <item>All time</item>
        <item>Last year</item>
        <item>Last month</item>
        <item>Custom date range&#8230;</item>
    </string-array>

    <!--Sort Order Spinner-->
    <string-array name="sort_order">
        <item>Popularity</item>
        <item>Date</item>
    </string-array>

    <!-- Comment Dialog -->
    <string-array name="dialog_comment">
        <item>Upvote</item>
        <item>Downvote</item>
        <item>Reply</item>
        <item>Author profile</item>
        <item>Share link to&#8230;</item>
        <item>Send comment text to&#8230;</item>
    </string-array>

    <!-- Feedback Dialog -->
    <string name="feedback_dialog_title">Feedback via&#8230;</string>
    <string-array name="dialog_feedback">
        <item>Twitter</item>
        <item>Google+</item>
        <item>Email</item>
        <item>Review on Google Play</item>
    </string-array>

    <!--Login dialog-->
    <string name="login_dialog_login">Login</string>
    <string name="login_prompt_privacy">* Your password will NOT be saved</string>
    <string name="login_prompt_logging_in">Logging in&#8230;</string>
    <string name="login_prompt_error_empty_username">Catch you, anonymous!</string>
    <string name="login_prompt_error_short_password">You got a short&#8230;password</string>
    <string name="login_prompt_error_offline">Where\'s the Internet? Can\'t get it</string>
    <string name="login_prompt_error_wrong_info">Arrr&#8230;wrong username/password</string>

    <!--Discard reply dialog-->
    <string name="discard_dialog_discard">Discard</string>
    <string name="discard_dialog_prompt_discard">Discard the reply?</string>
</resources>
