<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="5"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="58"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_typography"
        android:orderInCategory="99"
        android:title="@string/menu_typography"
        android:icon="@drawable/ic_text_format"
        app:showAsAction="ifRoom" />
</menu>
